<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wikinaut</string>
    <string name="content_description_place_holder">content_description</string>
    
    <!-- Preferences -->
    <string name="prefs_firstLaunch">firstLaunch</string>
	<string name="prefs_hasRatedKey">hasRatedKey</string>
	<string name="prefs_levelsPlayedCount">levelsPlayedCount</string>

    <!-- Launch Activity -->
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="launchActivity_loadingText">Loading&#8230;</string>
    <string name="launchActivity_noRandomText">You can\'t play random mode yet! Beat all the levels first!</string>

    <!-- Main Activity -->
    <string name="mainActivity_toSettingsButton">Settings</string>
    <string name="mainActivity_toLaunchButton">Launch</string>
    <string name="mainActivity_toMap">Map</string>
    <string name="mainActivity_toPlayScreen">Play Screen</string>
    <string name="mainActivity_toStartButton">Start Screen</string>

    <!-- About Activity -->
    <string name="title_activity_about">AboutActivity</string>
    <string name="aboutActivity_aboutBlurb">This app was made by Brian Tan, Daniel Gorelick, Doug Roeper, Nicholas Maresco, and Pablo Velarde for the class EC327 - Introduction to Software Engineering at Boston University. \n \n Based on the classic Wikipedia game, this game aims to simplify play on a mobile platform by eliminating reading through dense articles on a small screen. By using a subset of Wikipedia (Schools-Wikipedia.org), we\'ve also cut down on the total number of links for each word, further simplifying gameplay for the user. \n \n \n We hope you enjoy!</string>
    <!-- Map Activity -->
    <string name="title_activity_map">MapActivity</string>
    <string name="mapActivity_cannotClickNodeToastMessage">You can\'t play that level yet!</string>
    <string name="mapActivity_ratingPopUpTitle">Rate us!</string>
    <string name="mapActivity_ratingPopUpMessage">Giving us a good rating on Google Play helps us reach more people! Could you take a minute to rate us?</string>
    
    <!-- Start Screen Activity -->
    <string name="title_activity_start_level">StartLevelActivity</string>
    <string name="startLevelActivityBackButton">back</string>
    <string name="startLevelActivity_mission">Mission </string>
    <string name="startLevelActivity_moves">Moves: </string>
    <string name="startLevelActivity_best">Personal Best: </string>

    <!-- Settings activity -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="backbutton">Return</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="title_activity_play_screen">PlayScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="settingsActivity_fontTitle">Play Font:</string>
    <string name="settingsActivity_musicOnOff">Music On/Off</string>
    <string name="settingsActivity_musicVolumeTitle">Music Volume:</string>

    <!-- Play Screen Activity -->
    <string name="placeHolder">PlayScreen</string>
    <string name="parseWords">Parse Words.</string>
    <string name="wordTitleLabel"> Word Title Goes here.</string>
    <string name="playScreenActivity_pauseMenuTitle">Paused</string>
    <string name="action_settings">Settings</string>

    <!-- Win Activity -->
    <string name="title_activity_win">WinActivity</string>
    <string name="winActivity_winTitle">MISSION:</string>
    <string name="winActivity_success">SUCCESS!</string>
    <string name="winActivity_failed">FAILED!</string>
    <string name="winActivity_timeLabel">Your Time: </string>
    <string name="winActivity_timeSuffix">secs</string>
    <string name="winActivity_moveLabel">Your Moves: </string>
    <string name="winActivity_moveSuffix">moves</string>

    <!-- Lose Activity -->
    <string name="title_activity_lose">LoseActivity</string>
    <string name="loseActivity_title">MISSION:</string>
    <string name="loseActivity_failed">FAILED!</string>
    <string name="loseActivity_hint">hint: </string>

    <!-- Sharing -->
    <string name="share_emailDefaultText1">I went from </string>
    <string name="share_emailDefaultText2"> to </string>
    <string name="share_emailDefaultText3"> in </string>
    <string name="share_emailDefaultText4"> moves and in only </string>
    <string name="share_emailDefaultText5"> secs. Can you beat my score? \n \n Download Cosmo the Wikinaut on the Google Play Store! </string>
    <string name="title_activity_path">PathActivity</string>
    <string name="title_activity_random">RandomActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    
    <!-- Credits -->
	<string name="credits_text">We would like to give a special thanks to all of those who made EC327 all it is, through all of the caves and coral reefs. \n \n Professor Densmore \n \n Ernst Oberortner \n \n Annie Lane \n \n Carlos Cheung \n \n Luke Sorenson \n \n Timothy Chong \n \n \n Until the next adventure!</string>
    

</resources>
