<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.beep_boop.Beep"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >

    <com.beep_boop.Beep.stars.StarryBackgroundView
        android:id="@+id/settingsActivity_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        custom:backgroundImage="@drawable/starry_background"
        custom:starImages="@array/starImages" />

    <ImageButton
        android:id="@+id/settingsActivity_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@null"
        android:contentDescription="@string/content_description_place_holder"
        android:src="@drawable/button_back" />

    <ImageView
        android:id="@+id/settingsActivity_topbar"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_place_holder"
        android:src="@drawable/topbar_settings" />

    <TextView
        android:id="@+id/settingsActivity_fontTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsActivity_fontGroup"
        android:layout_centerHorizontal="true"
        android:fontFamily="fonts/Krungthep.ttf"
        android:text="@string/settingsActivity_fontTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/launchActivity_loadingTextColor"
        android:textColorHint="@color/launchActivity_loadingTextColor" />

    <Switch
        android:id="@+id/settingsActivity_musicOnOffSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/settingsActivity_backButton"
        android:layout_below="@+id/settingsActivity_topbar"
        android:text="@string/music"
        android:textColor="@color/launchActivity_loadingTextColor"
        android:textColorHint="@color/launchActivity_loadingTextColor" />

    <RadioGroup
        android:id="@+id/settingsActivity_fontGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsActivity_backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >

        <RadioButton
            android:id="@+id/settingsActivity_fontGroup_krungthep"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:textColor="@color/launchActivity_loadingTextColor"
            android:textColorHint="@color/launchActivity_loadingTextColor" />

        <RadioButton
            android:id="@+id/settingsActivity_fontGroup_times"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:textColor="@color/launchActivity_loadingTextColor"
            android:textColorHint="@color/launchActivity_loadingTextColor" />

        <RadioButton
            android:id="@+id/settingsActivity_fontGroup_nasa"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:textColor="@color/launchActivity_loadingTextColor"
            android:textColorHint="@color/launchActivity_loadingTextColor" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/settingsActivity_musicBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/settingsActivity_musicBarTitle"
        android:layout_marginTop="30dp"
        android:max="15"
        android:progress="1" />

    <TextView
        android:id="@+id/settingsActivity_musicBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsActivity_musicOnOffSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="fonts/Krungthep.ttf"
        android:text="@string/settingsActivity_musicVolumeTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/settingsScreenActivity_textColor" />

</RelativeLayout>