<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.beep_boop.Beep"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.beep_boop.Beep.stars.StarryBackgroundView
        android:id="@+id/randomActivity_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        custom:backgroundImage="@drawable/random_background"
        custom:starImages="@array/starImages" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/randomActivity_titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/startLevelActivity_mission"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/startScreenActivity_textColor"
            android:textSize="50sp" />
        
        <TextView
            android:id="@+id/randomActivity_movesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/startLevelActivity_moves"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/startScreenActivity_textColor" />

        <com.beep_boop.Beep.startScreen.WordDisplay
            android:id="@+id/randomActivity_wordDisplay"
            android:layout_width="336dp"
            android:layout_height="207dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.00"
            android:padding="10dp"
            custom:arrowImage="@drawable/start_arrow"
            custom:backgroundImage="@drawable/random_red_background" />
        
        <ImageButton
            android:id="@+id/randomActivity_randomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/content_description_place_holder"
            android:padding="10dp"
            android:src="@drawable/random_reroll" />

        <ImageButton
            android:id="@+id/randomActivity_startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/content_description_place_holder"
            android:padding="10dp"
            android:src="@drawable/random_start" />

        <ImageButton
            android:id="@+id/randomActivity_backToMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/content_description_place_holder"
            android:padding="10dp"
            android:src="@drawable/random_back"/>
    </LinearLayout>

</RelativeLayout>