<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.beep_boop.Beep"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >

    <com.beep_boop.Beep.stars.StarryBackgroundView
        android:id="@+id/winActivity_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        custom:backgroundImage="@drawable/starry_background"
        custom:starImages="@array/starImages" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/winActivity_mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/content_description_place_holder"
            android:padding="10dp"
            android:src="@drawable/button_next" />

        <ImageButton
            android:id="@+id/winActivity_shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/content_description_place_holder"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_share" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_place_holder"
        android:src="@drawable/mission_success_bubble" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/winActivity_moveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/winActivity_moveLabel"
            android:textColor="@color/winActivity_textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winActivity_timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/winActivity_timeLabel"
            android:textColor="@color/launchActivity_loadingTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_place_holder"
        android:src="@drawable/spaceship_success" />

</RelativeLayout>